# groupJunior

./: .env-example  Makefile  README.md  docker-compose.yaml
.github/workflows/: linter.yaml
backend_api/: Dockerfile  poetry.toml  pyproject.toml
backend_api/app/: Makefile  alembic.ini  app_factory.py  main.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  password_handler.py  router.py  security.py
backend_api/app/applications/database/: base_models.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/database/: session_dependencies.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_09_1822-add4545338ff_create_user.py  2025_06_06_1646-c740c0f9917e_add_user_verification_and_admin_fields.py  2025_06_17_1702-a274bac56031_add_product.py  2025_07_01_1647-2c19e21df9fa_cart.py
backend_api/app/services/rabbit/: constants.py  rabbitmq_service.py
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
documentation/docs/: index.md  tasks.md
frontend/: Dockerfile  pyproject.toml
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/router/: main_page_router.py
frontend/app/templates/: index.html  login.html  product_detail.html  register.html
nginx/: nginx.conf
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py  settings.py
notification_service/app/utils/: email_sender.py
(+8 files in other folders)
